<resources>
	<string name="app_name">Trip Mate</string>
	
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	
	<string name="action_settings">Settings</string>
	<string name="login">Login</string>
	<string name="about">About Us</string>
	<string name="loading">Please wait…</string>
	<string name="login_prompt">Login to get your details</string>
	<string name="logout">Logout of TripMate</string>
	<string name="app_desc">Proudly powered by MTN</string>
	<string name="get_started">Get started with TripMate</string>
	<string name="app_tut">
		1. Check bus availability\n
		2. Purchase a ticket\n
		3. Reserve a seat\n
		Voila! You are all set for your awesome trip
	</string>
	<string name="start_travelling">Start Travelling</string>
	<string name="email_address">Username or Email</string>
	<string name="password">Password</string>
	<string name="welcome_back">Welcome Back, Trip Mate!</string>
	<string name="welcome_desc">There is a lot to enjoy from our services</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="prompt_username_error">Enter you username correctly</string>
	<string name="prompt_password_error">Password is not properly formatted</string>
	<string name="email">Email Address</string>
	<string name="almost_done">Almost Done</string>
	<string name="finish">Finish</string>
	<string name="register_desc">Tell us more about yourself</string>
	<string name="username">First name &amp; Surname </string>
	<string name="phone">Phone Number</string>
	<string name="payment_method">Payment Method (eg: Airtel)</string>
	<string name="prompt_phone_error">Invalid phone number</string>
	<string name="prompt_method_error">Invalid payment method</string>
	<string name="transition_search_back">transition_search_back</string>
	<string name="search">Search Bus</string>
	<string name="search_header">Search</string>
	<string name="origin">Origin</string>
	<string name="book_your_bus_ticket_now">Book Your \nBus Ticket Now</string>
	<string name="welcome_user">Welcome, %s</string>
	<string name="destination">Destination</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="date_dialog_header">Select day of trip</string>
	<string name="available">Available</string>
	<string name="booked">Booked</string>
	<string name="profile">Profile</string>
	<string name="enter_content_here">Enter content here</string>
	<string name="visibility">Visibility</string>
	<string name="v_content_text">Tap here to enable us track your current trip with your
		passengers</string>
	<string name="trip_details">Trip details</string>
	<string name="no_trip_reservations">No trip reservations</string>
	<string name="purchase_ticket">Purchase bus ticket</string>
	<string name="buy_now">Buy now</string>
	<string name="driver">Driver</string>
	<string name="bus_number">Bus number</string>
	<string name="date">Date</string>
	<string name="time">Time</string>
	<string name="seat_number">Seat Number</string>
	<string name="passenger">Passenger</string>
	<string name="title_activity_maps">Map</string>
	<string name="reservations">Reservations</string>
</resources>
