<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<io.peanutsdk.widget.FourThreeImageView
		android:id="@+id/onboard_tut_image"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:src="@color/content_placeholder" />
	
	<io.peanutsdk.widget.BaselineGridTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:padding="@dimen/padding_normal"
		android:text="@string/get_started"
		android:textAppearance="@style/TextAppearance.DribbbleShotDescription"
		android:textColor="@color/text_primary_dark"
		android:textSize="18sp"
		android:textStyle="bold"
		app:fontFamily="@font/abeezee" />
	
	<io.peanutsdk.widget.BaselineGridTextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="@dimen/padding_normal"
		android:text="@string/app_tut"
		android:textAlignment="center"
		android:textAppearance="@style/TextAppearance.DribbbleShotDescription"
		android:textColor="@color/text_secondary_dark"
		app:fontFamily="@font/abeezee" />
	
	<Button
		android:id="@+id/finish"
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="@dimen/spacing_large"
		android:background="@drawable/button_background"
		android:paddingEnd="@dimen/spacing_large"
		android:paddingStart="@dimen/spacing_large"
		android:stateListAnimator="@animator/raise"
		android:text="@string/start_travelling"
		android:textColor="@color/text_primary_light" />

</LinearLayout>