<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/background_lightish"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context="io.tripmate.ui.SearchActivity">
	
	<android.support.constraint.ConstraintLayout
		android:id="@+id/container"
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		
		<io.peanutsdk.widget.FourThreeLinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/accent"
			android:gravity="center_horizontal"
			android:orientation="vertical">
			
			<include layout="@layout/header_toolbar" />
			
			<io.peanutsdk.widget.BaselineGridTextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/padding_normal"
				android:text="@string/book_your_bus_ticket_now"
				android:textAlignment="center"
				android:textAppearance="@style/TextAppearance.DribbbleShotDescription"
				android:textColor="@color/text_primary_light"
				android:textSize="22sp"
				android:textStyle="bold"
				app:fontFamily="@font/nunito_semibold" />
			
			<io.peanutsdk.widget.BaselineGridTextView
				android:id="@+id/user_data_content"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAlignment="center"
				android:textAppearance="@style/TextAppearance.DribbbleShotDescription"
				android:textColor="@color/text_secondary_light"
				app:fontFamily="@font/nunito_semibold"
				tools:text="Welcome, Quabynah Bilson!" />
		
		</io.peanutsdk.widget.FourThreeLinearLayout>
		
		
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginEnd="@dimen/spacing_xlarge"
			android:layout_marginStart="@dimen/spacing_xlarge"
			android:layout_marginTop="200dp"
			android:gravity="center_horizontal"
			android:orientation="vertical">
			
			<android.support.v7.widget.CardView
				android:id="@+id/card_trip_details"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				app:cardBackgroundColor="@color/background_light"
				app:cardCornerRadius="@dimen/spacing_normal"
				app:cardElevation="@dimen/z_card">
				
				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:orientation="vertical"
					android:padding="@dimen/padding_normal">
					
					<android.support.design.widget.TextInputLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">
						
						<android.support.design.widget.TextInputEditText
							android:id="@+id/origin_content"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:drawablePadding="@dimen/padding_dialog"
							android:drawableStart="@drawable/ic_menu_send"
							android:fontFamily="@font/nunito_semibold"
							android:hint="@string/origin"
							android:imeOptions="actionNext"
							android:inputType="textAutoComplete|textCapSentences"
							android:textColor="@color/text_secondary_dark"
							tools:text="Madina" />
					
					</android.support.design.widget.TextInputLayout>
					
					<ImageButton
						android:layout_width="@dimen/fab_size"
						android:layout_height="@dimen/fab_size"
						android:layout_gravity="center_horizontal"
						android:layout_margin="@dimen/fab_margin"
						android:background="@drawable/fab"
						android:elevation="@dimen/z_fab"
						android:src="@drawable/ic_swap"
						tools:ignore="ContentDescription" />
					
					<android.support.design.widget.TextInputLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_gravity="center_horizontal"
						android:layout_marginBottom="@dimen/spacing_normal"
						app:hintTextAppearance="@style/TextAppearance.FloatLabelHint">
						
						<android.support.design.widget.TextInputEditText
							android:id="@+id/destination_content"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:drawablePadding="@dimen/padding_dialog"
							android:drawableStart="@drawable/ic_pin_drop"
							android:fontFamily="@font/nunito_semibold"
							android:hint="@string/destination"
							android:imeOptions="actionDone"
							android:inputType="textAutoComplete|textCapSentences"
							android:textColor="@color/text_secondary_dark"
							tools:text="Dansoman" />
					
					</android.support.design.widget.TextInputLayout>
				
				</LinearLayout>
			
			</android.support.v7.widget.CardView>
			
			
			<android.support.v7.widget.CardView
				android:id="@+id/card_date_content"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_large"
				android:onClick="pickDate"
				android:stateListAnimator="@animator/raise"
				app:cardBackgroundColor="@color/background_light"
				app:cardCornerRadius="@dimen/spacing_normal"
				app:cardElevation="@dimen/z_card">
				
				<io.peanutsdk.widget.BaselineGridTextView
					android:id="@+id/date_content"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:drawablePadding="@dimen/padding_normal"
					android:drawableStart="@drawable/ic_event"
					android:padding="@dimen/padding_normal"
					android:textColor="@color/text_secondary_dark"
					tools:text="Friday, March 20, 2018" />
			
			</android.support.v7.widget.CardView>
			
			<Button
				android:id="@+id/search_button"
				android:layout_width="250dp"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/spacing_large"
				android:background="@drawable/button_background"
				android:onClick="searchBus"
				android:paddingEnd="@dimen/padding_dialog"
				android:paddingStart="@dimen/padding_dialog"
				android:stateListAnimator="@animator/raise"
				android:text="@string/search"
				android:textColor="@color/text_primary_light" />
		
		</LinearLayout>
	
	</android.support.constraint.ConstraintLayout>

</ScrollView>
